[tool.poetry]
name = "sql"
version = "0.1.0"
description = ""
authors = ["Serhiyko <magdisyuk1999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
